added some bio page

--- a/bio/page.html
+++ b/bio/page.html
@@ -3,8 +3,44 @@
 <html>
 
 <head>
+	<title>About Me</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="../assets/css/main.css" />
 </head>
 
-<body>
-	<p>coming soon...</p>
+<body class="homepage is-preload">
+	<div id="page-wrapper">
+		<!-- Header -->
+		<section id="header" class="wrapper" style="background: url(../images/redwoods.jpg);">
+
+			<!-- Logo -->
+				<div id="logo">
+					<h1><a href="index.html">Calvin Osinga</a></h1>
+					<p>Ph.D. Student</p>
+				</div>
+
+
+		</section>
+		<!-- Intro -->
+		<section id="intro" class="wrapper style1">
+			
+			<div class="container">
+				<div class="image-txt-container">
+					<img src="../images/bio_pic.jpg" style="width: 50%;">
+					<p class="style1">
+						I'm a graduate student at the University of Maryland - College Park
+						in the Astronomy Department. **Add picture to the left** <br><br>
+
+						This page serves as a repository for data and supplementary analyses
+						that may not be included in the papers themselves. <br><br>
+					</p>
+				</div>
+
+				<ul class="actions">
+					<li><a href="bio/page.html" class="button style3 large">See More</a></li>
+				</ul>
+			</div>
+		</section>
+	</div>
 </body>
