--- a/bio/page.html
+++ b/bio/page.html
@@ -12,12 +12,14 @@
 <body class="homepage is-preload">
 	<div id="page-wrapper">
 		<!-- Header -->
-		<section id="header" class="wrapper" style="background: url(../images/redwoods.jpg);">
+		<section id="header" class="wrapper" 
+			style="background: url(../images/redwoods.jpg); 
+			background-position: 50% 65%; 
+			background-size: cover">
 
 			<!-- Logo -->
-				<div id="logo">
-					<h1><a href="index.html">Calvin Osinga</a></h1>
-					<p>Ph.D. Student</p>
+				<div id="logo" style="top:-25%">
+					<h1 style="font-size:xx-large;"><a href="index.html">About Me</a></h1>
 				</div>
 
 
