making sup analysis

--- a/bio/page.html
+++ b/bio/page.html
@@ -29,9 +29,9 @@
 			<div class="title">Curriculum Vitae</div>
 			<div class="container">
 				<div class="image-txt-container">
-					<img src="../images/bio_pic.jpg" style="width: 50%;">
+					<img src="../images/library.jpg" style="width: 50%;">
 					<p class="style1">
-						<span style="color:red"> -change picture to reading one <br>
+						<span style="color:red"> 
 						-make CV <br> -add link to pdf version</span>
 					</p>
 				</div>
