updated stage of career

--- a/bio/page.html
+++ b/bio/page.html
@@ -77,7 +77,7 @@
 						
 						I now attend the University of
 						Maryland - College Park, where I completed my master's in astronomy and
-						am currently in my third year of the Ph. D. program. I'm building on
+						am currently in my final year of the Ph. D. program. I'm building on
 						my experiences developing new analysis software for state-of-the-art 
 						computer simulations of the large-scale structure of the Universe.
 					</p>
